--- a/Back_App/chat/src/main/resources/static/index.html
+++ b/Back_App/chat/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <title>Spring Boot WebSocket Chat Application</title>
         <!-- My CSS Rules -->
-        <link rel="stylesheet" href="/chatMain.css"/>
+        <link rel="stylesheet" href="/chatMain.css" type="text/css"/>
     </head>
     <body>
         <noscript>
