adding filters- adopt page

--- a/PawSociety/index.html
+++ b/PawSociety/index.html
@@ -68,7 +68,7 @@
       <div class="intro-text pt3">
         <div class="intro-lead-in">Every dog needs a home!</div>
         <div class="intro-heading ">Do small things with great love...</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Adopt now</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="adopt.html">Adopt now</a>
       </div>
     </div>
   </header>
