(  15-11-2019 ) : Minor Syntax editings

--- a/PawSociety/adopt.html
+++ b/PawSociety/adopt.html
@@ -11,16 +11,16 @@
     <title>Adoption</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom fonts for this template -->
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
-        type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
+        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
 
@@ -68,12 +68,13 @@
         <!-- <div id="dogphoto"> -->
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Every dog needs a home!</div>
+                <div class="intro-lead-in">Every dog needs a home!
                 
                 <a class="btn btn-primary btn-xl js-scroll-trigger" href="#find-dog">Find your dog</a>
             </div>
+            </div>
         </div>
-        </div>
+        
     </header>
 
     <!--Main Section Adopt-->
@@ -273,7 +274,7 @@
                         </div>
                     </div>
 
-
+                </div>
     </section>
 
 
