--- a/PawSociety/adopt.html
+++ b/PawSociety/adopt.html
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <img id="logo_animated" src="/PawSociety/img/logos/logo_animated.gif" alt="logo">
+            <img id="logo_animated" src="/PawSociety/img/logos/logo_animated.gif" alt="animated-logo">
             <a class="navbar-brand js-scroll-trigger logo" href="index.html">Paw Society</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
