new imgs css fixed

--- a/PawSociety/adopt.html
+++ b/PawSociety/adopt.html
@@ -68,11 +68,9 @@
         <!-- <div id="dogphoto"> -->
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Every dog needs a home!
-                
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#find-dog">Find your dog</a>
+                <div class="intro-lead-in">Every dog needs a home!</div>    
             </div>
-            </div>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#find-dog">Find your dog</a>
         </div>
         
     </header>
